--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <h1>Angular + D3</h1>
 </header>
 <app-bar></app-bar>
-<app-pie></app-pie>
-<app-scatter></app-scatter>
+<pie dataUrl="assets/example.csv" title="Frutas Consumidas"></pie>
+<pie dataUrl="assets/browsers.csv" title="Browsers Utilizados - 2023"></pie>
