--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>Angular + D3</h1>
+  <h1>PROJINT3SEM-EC</h1>
 </header>
 <app-bar></app-bar>
 <pie dataUrl="assets/example.csv" title="Frutas Consumidas"></pie>
