added title to PIE chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,4 @@
   <h1>PROJINT3SEM-EC</h1>
 </header>
 <app-bar></app-bar>
-<pie dataUrl="assets/example.csv" title="Frutas Consumidas"></pie>
-<pie dataUrl="assets/browsers.csv" title="Browsers Utilizados - 2023"></pie>
+<pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
