--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,27 @@
-<header>
-  <h1>PROJINT3SEM-EC</h1>
-</header>
-<app-bar></app-bar>
-<pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon >menu</mat-icon>
+    </button>
+    Graph Generator
+    <span class="menu-spacer"></span>
+  </mat-toolbar-row>
+  <!-- <mat-toolbar-row>
+    <span style="font-size: 12px;">Sub Título</span>
+  </mat-toolbar-row> -->
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav>
+    <mat-nav-list>
+      <a mat-list-item [routerLink]="'/home'"> Home </a>
+      <a mat-list-item [routerLink]="'/dashboard'"> Dashboard </a>
+      <!-- <a mat-list-item (click)="sidenav.toggle()" mat-list-item>Close</a> -->
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div style="height: 88vh;">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
