--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,12 @@
-.mat-mdc-list-base{
+.mat-mdc-list-base {
     padding-top: 0px;
 }
-.mat-mdc-list-item, .mat-mdc-list-option {
+
+.mat-mdc-list-item,
+.mat-mdc-list-option {
     padding: 0px 60px;
+}
+
+.mat-drawer-container {
+    height: calc(100% - 64px);
 }
