--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,2 +1,4 @@
 <pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
 <pie dataUrl="assets/browsers.csv" titleText="Utilização de Browsers"></pie>
+<pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
+<pie dataUrl="assets/browsers.csv" titleText="Utilização de Browsers"></pie>
