--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,4 +1,5 @@
 <pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
 <pie dataUrl="assets/browsers.csv" titleText="Utilização de Browsers"></pie>
 <pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
-<pie dataUrl="assets/browsers.csv" titleText="Utilização de Browsers"></pie>
+
+<line dataUrl="assets/linha.csv" titleText="GRAFICO MURILO"></line>
