tentiva grafico de barra

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -2,4 +2,4 @@
 <pie dataUrl="assets/browsers.csv" titleText="Utilização de Browsers"></pie>
 <pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
 
-<line dataUrl="assets/linha.csv" titleText="GRAFICO MURILO"></line>
+<bar dataUrl="assets/example.csv" titleText="GRAFICO BARRA MURILO"></bar>
