--- a/src/app/bar/bar.component.scss
+++ b/src/app/bar/bar.component.scss
@@ -11,4 +11,7 @@
   .bar {
     fill: steelblue;
   }
+
+  .grid line {stroke: lightgrey;stroke-opacity: 0.7;shape-rendering: crispEdges;}
+.grid path {stroke-width: 0;}
   
