dynamic adding components

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,4 +1,10 @@
-<pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
+<!-- <pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
 <pie dataUrl="assets/browsers.csv" titleText="Utilização de Browsers"></pie>
-<pie dataUrl="assets/IBGE/domicilios_internet.csv" titleText="Domicílios com internet - 2015 - IBGE"></pie>
-<bar dataUrl="assets/example.csv" titleText="MURILO"></bar>
+<bar dataUrl="assets/example.csv" titleText="Gráfico de barras"></bar>
+<line dataUrl="assets/line.csv" titleText="Gráfico de linhas"></line> -->
+
+<ng-template chartHost></ng-template>
+
+<button mat-fab class="fab" color="primary" (click)="openDialog()">
+    <mat-icon>add</mat-icon>
+</button>
