adding more styles

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -8,3 +8,7 @@
 <button mat-fab class="fab" color="primary" (click)="openDialog()">
     <mat-icon>add</mat-icon>
 </button>
+
+<button mat-mini-fab color="primary" class="mini-fab" aria-label="Example icon button with a menu icon" (click)="emptyDash()">
+    <mat-icon>delete</mat-icon>
+</button>
