--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -1,3 +1,9 @@
+:host{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 .chart {
     width: 100%;
     height: 400px;
@@ -14,7 +20,14 @@
 
   .fab{
     position: fixed;
-    bottom: 20px;
+    bottom: 60px;
     right: 20px;
   }
+
+  .mini-fab{
+    position: fixed;
+    bottom: 10px;
+    right: 27px;
+  }
+  
   
