--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="sidenav.toggle()">
       <mat-icon >menu</mat-icon>
     </button>
-    Graph Generator
+    Dynamic dashboard
     <span class="menu-spacer"></span>
   </mat-toolbar-row>
   <!-- <mat-toolbar-row>
